# kryptos

./: .coverage  .gitignore  LICENSE  README.md  carpetas.md  main.py  pyproject.toml
.github/workflows/: security-audit.yml  test.yml
core/: crypto.py  logging_config.py  password_generator.py
db/: database.py  repository.py
models/: credential.py  user.py
services/: auth_service.py  vault_service.py
tests/: test_auth_service_security.py  test_db_migrations.py  test_session_timeout.py  test_vault_service_security.py
ui/: app.py
ui/screens/: auth_screen.py  confirm_delete_screen.py  dashboard_screen.py  entry_form_screen.py  new_entry_screen.py
