[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptos-password-manager"
version = "0.1.0"
description = "Gestor de Contraseñas en Terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.5",
    "pyperclip>=1.11.0",
    "sqlmodel>=0.0.37",
    "textual>=8.1.1",
]

[project.scripts]
kryptos = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "db*", "services*", "models*", "ui*"]
